// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartialPrintModelVisitorReference Start at PrintModel 1`] = `
[
  {
    "entityPath": "content[1].segments[1].definitions[1].elementReferences[1].hideConditions[1].precondition[1]",
    "id": "HIDE_CONDITION_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[2].field[1].path[1]",
    "id": "FIELD_2",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[3].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].segments[1].definitions[1].elementReferences[2].hideConditions[1].precondition[1]",
    "id": "HIDE_CONDITION_COMPUTATION_2",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].segments[1].definitions[1].elementReferences[2].hideConditions[2].precondition[1]",
    "id": "HIDE_CONDITION_COMPUTATION_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[6].field[1].path[1]",
    "id": "FIELD_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[7].expression[1].model[1].basePath[1]",
    "id": "EXPRESSION_1",
    "path": "Person/person",
  },
  {
    "entityPath": "content[1].elementDefinitions[5].table[1].basePath[1]",
    "id": "TABLE_1",
    "path": "Person/person",
  },
  {
    "entityPath": "content[1].elementDefinitions[8].image[1].fieldSource[1].path[1]",
    "id": "IMAGE_SOURCE",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].basePath[1]",
    "id": "LISTING_1",
    "path": "Person/person/address",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].default[1].propertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].default[1].propertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].default[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].propertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_FIELD_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].propertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_FIELD_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_FIELD_VALUE_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_FIELD_VALUE_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].propertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_GROUP_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].propertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_GROUP_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_GROUP_VALUE_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_GROUP_VALUE_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[2].default[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_2",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[2].default[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_2",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[3].default[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[3].default[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].rowPropertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_ROW_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].rowPropertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_ROW_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[12].field[1].path[1]",
    "id": "FIELD_1",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[14].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_2",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[15].lineChart[1].basePath[1]",
    "id": "LINE_CHART_BASE_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[15].lineChart[1].data[1].valueField[1]",
    "id": "LINE_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[15].lineChart[1].data[2].valueField[1]",
    "id": "8L1oixVtAM18oD3OqbMnD",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[16].pieChart[1].basePath[1]",
    "id": "PIE_CHART_BASE_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[16].pieChart[1].data[1].valueField[1]",
    "id": "PIE_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[16].pieChart[1].data[1].keyField[1]",
    "id": "PIE_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[19].switch[1].cases[1].precondition[1]",
    "id": "SWITCH_CASE_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[19].switch[1].cases[2].precondition[1]",
    "id": "SWITCH_CASE_COMPUTATION_2",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[23].field[1].path[1]",
    "id": "FIELD_6",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[24].calculation[1].computationAlternatives[1].precondition[1]",
    "id": "CALCULATION_COMPUTATION_5",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[24].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_5",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[25].barChart[1].basePath[1]",
    "id": "BAR_CHART_BASE_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[25].barChart[1].data[1].valueField[1]",
    "id": "BAR_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[25].barChart[1].data[1].keyField[1]",
    "id": "BAR_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[28].field[1].path[1]",
    "id": "FIELD_4",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[29].calculation[1].computationAlternatives[1].precondition[1]",
    "id": "CALCULATION_COMPUTATION_3",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[29].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_3",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[26].area[1].dataContexts[1].path[1]",
    "id": "REPEATABLE_AREA_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[30].expression[1].model[1].basePath[1]",
    "id": "EXPRESSION_2",
    "path": "Person/",
  },
  {
    "entityPath": "content[1].elementDefinitions[32].field[1].path[1]",
    "id": "FIELD_5",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[33].calculation[1].computationAlternatives[1].precondition[1]",
    "id": "CALCULATION_COMPUTATION_4",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[33].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_4",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].segments[1].definitions[2].dataContexts[1].path[1]",
    "id": "REPEATABLE_SEGMENT_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].watermarks[1].definitions[1].conditions[1].precondition[1]",
    "id": "WATERMARK_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].watermarks[1].definitions[2].conditions[1].precondition[1]",
    "id": "WATERMARK_PRECONDITION_2",
    "path": "Person/person/date",
  },
]
`;

exports[`PartialPrintModelVisitorReference Start at Repeatable Segment 1`] = `
[
  {
    "entityPath": "content[1].elementDefinitions[32].field[1].path[1]",
    "id": "FIELD_5",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[33].calculation[1].computationAlternatives[1].precondition[1]",
    "id": "CALCULATION_COMPUTATION_4",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[33].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_4",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].segments[1].definitions[2].dataContexts[1].path[1]",
    "id": "REPEATABLE_SEGMENT_1",
    "path": "Person/person/repeat",
  },
]
`;

exports[`PartialPrintModelVisitorReference Start at Segment 1`] = `
[
  {
    "entityPath": "content[1].segments[1].definitions[1].elementReferences[1].hideConditions[1].precondition[1]",
    "id": "HIDE_CONDITION_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[2].field[1].path[1]",
    "id": "FIELD_2",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[3].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].segments[1].definitions[1].elementReferences[2].hideConditions[1].precondition[1]",
    "id": "HIDE_CONDITION_COMPUTATION_2",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].segments[1].definitions[1].elementReferences[2].hideConditions[2].precondition[1]",
    "id": "HIDE_CONDITION_COMPUTATION_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[6].field[1].path[1]",
    "id": "FIELD_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[7].expression[1].model[1].basePath[1]",
    "id": "EXPRESSION_1",
    "path": "Person/person",
  },
  {
    "entityPath": "content[1].elementDefinitions[5].table[1].basePath[1]",
    "id": "TABLE_1",
    "path": "Person/person",
  },
  {
    "entityPath": "content[1].elementDefinitions[8].image[1].fieldSource[1].path[1]",
    "id": "IMAGE_SOURCE",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].basePath[1]",
    "id": "LISTING_1",
    "path": "Person/person/address",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].default[1].propertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].default[1].propertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].default[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].propertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_FIELD_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].propertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_FIELD_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_FIELD_VALUE_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].field[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_FIELD_VALUE_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].propertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_GROUP_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].propertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_GROUP_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_GROUP_VALUE_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[1].group[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_GROUP_VALUE_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[2].default[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_2",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[2].default[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_2",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[3].default[1].valueComputationAlternatives[1].precondition[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].columns[3].default[1].valueComputationAlternatives[1].operation[1]",
    "id": "LISTING_COLUMN_VALUE_COMPUTATION_3",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].rowPropertyComputations[1].computationAlternatives[1].precondition[1]",
    "id": "LISTING_ROW_PROPERTY_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[9].listing[1].rowPropertyComputations[1].computationAlternatives[1].operation[1]",
    "id": "LISTING_ROW_PROPERTY_COMPUTATION_1",
    "path": "value",
  },
  {
    "entityPath": "content[1].elementDefinitions[12].field[1].path[1]",
    "id": "FIELD_1",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[14].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_2",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[15].lineChart[1].basePath[1]",
    "id": "LINE_CHART_BASE_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[15].lineChart[1].data[1].valueField[1]",
    "id": "LINE_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[15].lineChart[1].data[2].valueField[1]",
    "id": "8L1oixVtAM18oD3OqbMnD",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[16].pieChart[1].basePath[1]",
    "id": "PIE_CHART_BASE_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[16].pieChart[1].data[1].valueField[1]",
    "id": "PIE_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[16].pieChart[1].data[1].keyField[1]",
    "id": "PIE_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[19].switch[1].cases[1].precondition[1]",
    "id": "SWITCH_CASE_COMPUTATION_1",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[19].switch[1].cases[2].precondition[1]",
    "id": "SWITCH_CASE_COMPUTATION_2",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[23].field[1].path[1]",
    "id": "FIELD_6",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[24].calculation[1].computationAlternatives[1].precondition[1]",
    "id": "CALCULATION_COMPUTATION_5",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[24].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_5",
    "path": "Person/person/name1",
  },
  {
    "entityPath": "content[1].elementDefinitions[25].barChart[1].basePath[1]",
    "id": "BAR_CHART_BASE_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[25].barChart[1].data[1].valueField[1]",
    "id": "BAR_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[25].barChart[1].data[1].keyField[1]",
    "id": "BAR_CHART_DATA_1",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[28].field[1].path[1]",
    "id": "FIELD_4",
    "path": "Person/person/repeat/name",
  },
  {
    "entityPath": "content[1].elementDefinitions[29].calculation[1].computationAlternatives[1].precondition[1]",
    "id": "CALCULATION_COMPUTATION_3",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[29].calculation[1].computationAlternatives[1].operation[1]",
    "id": "CALCULATION_COMPUTATION_3",
    "path": "Person/person/date",
  },
  {
    "entityPath": "content[1].elementDefinitions[26].area[1].dataContexts[1].path[1]",
    "id": "REPEATABLE_AREA_1",
    "path": "Person/person/repeat",
  },
  {
    "entityPath": "content[1].elementDefinitions[30].expression[1].model[1].basePath[1]",
    "id": "EXPRESSION_2",
    "path": "Person/",
  },
]
`;
